# blog-code-snippets

./: .pre-commit-config.yaml  pyproject.toml  setup-env.sh
dependency-injection-intro/: dependency-injection-intro_1.py  dependency-injection-intro_2.py  dependency-injection-intro_season_1.py  dependency-injection-intro_season_2.py
drf-dynamic-serializer/: class-bench.py  post.py  type-bench.py
factory-pattern/: factory-pattern-2.py
package-parent-exception/: package-parent-exception-with.py
strategy-factory-pattern/: strategy-factory-pattern-1.py  strategy-factory-pattern-2.py  strategy-factory-pattern-4.py  strategy-factory-pattern-4b.py  strategy-factory-pattern-5.py  strategy-factory-pattern-6.py
strategy-pattern/: strategy-pattern-export-2b.py  strategy-pattern-export-3.py
